--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -55,5 +55,5 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            gozargah/marzban:${{github.ref_name}}
-            ghcr.io/gozargah/marzban:${{github.ref_name}}
+            pettoan/marzban:${{github.ref_name}}
+            ghcr.io/pettoan/marzban:${{github.ref_name}}
