--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   marzban:
-    image: pettoan/marzban:latest
+    image: toanteen/marzban:latest
     restart: always
     env_file: .env
     network_mode: host
